--- a/exercícios/desafio10/desafio10.html
+++ b/exercícios/desafio10/desafio10.html
@@ -31,8 +31,8 @@
                 <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a class="externo"  href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank"><strong>Dan Morrill</strong></a>. Ele conta que abriu o <a class="externo"href="https://inkscape.org/pt-br/" target="_blank">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
                 <div id="foto1">
                     <picture>
-                        <source media="(max-width: 600px)" srcset="C:\Users\Neymar\Desktop\html-css\exercícios\desafio10\imagens\dan-droids-pq.png" type="image/png">
-                        <img src="C:\Users\Neymar\Desktop\html-css\exercícios\desafio10\imagens\dan-droids.png" alt="Imagem Flexível">
+                        <source media="(max-width: 600px)" srcset="C:\Users\Neymar\Desktop\Web studies\html-css\exercícios\desafio10\imagens\dan-droids-pq.png" type="image/png">
+                        <img src="C:\Users\Neymar\Desktop\Web studies\html-css\exercícios\desafio10\imagens\dan-droids.png" alt="Imagem Flexível">
                     </picture>
                 </div>
                 <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <a href="#">Dandroids</a>.
@@ -41,8 +41,8 @@
                 <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="#">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
                 </p>
                 <picture>
-                    <source media="(max-width: 600px)" srcset="C:\Users\Neymar\Desktop\html-css\exercícios\desafio10\imagens\irina-blok-pq.jpg" type="image/png">
-                        <img src="C:\Users\Neymar\Desktop\html-css\exercícios\desafio10\imagens\irina-blok.jpg" alt="Imagem Flexível">
+                    <source media="(max-width: 600px)" srcset="imagens\irina-blok-pq.jpg" type="image/png">
+                        <img src="imagens\irina-blok.jpg" alt="Imagem Flexível">
                 </picture>
                 <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <a href="#">Bugdroid</a>, o novo mascote do Android.
                 </p>
