update size fonte tabela

--- a/exercícios/desafio10/desafio10.html
+++ b/exercícios/desafio10/desafio10.html
@@ -32,7 +32,7 @@
                 <div id="foto1">
                     <picture>
                         <source media="(max-width: 600px)" srcset="C:\Users\Neymar\Desktop\Web studies\html-css\exercícios\desafio10\imagens\dan-droids-pq.png" type="image/png">
-                        <img src="C:\Users\Neymar\Desktop\Web studies\html-css\exercícios\desafio10\imagens\dan-droids.png" alt="Imagem Flexível">
+                        <img src="imagens\dan-droids.png" alt="Imagem Flexível">
                     </picture>
                 </div>
                 <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <a href="#">Dandroids</a>.
