--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background Sizing</title>
-    <style>
-        
-    </style>
+    <link rel="stylesheet" type ="text/css" href="style.css">
 </head>
 <body>
-    <div>
-
-    </div>
-    <div>
-
-    </div>
-    <div>
-
-    </div>
-    <div>
-
-    </div>
-
+    <div class="container">
+        <div class="card">
+            <div class="front"></div>
+            <div class="back">
+                <h1>Back of the card</h1>
+                <p>Additional info on the back of the card</p>
+            </div>
+        </div>    
+    </div>        
 
 </body>
 </html>
