--- a/emmet to gain some time/funanimatedcard.html
+++ b/emmet to gain some time/funanimatedcard.html
@@ -16,6 +16,6 @@
         </div> 
            
     </div>
-    <p><a href="C:\Users\Neymar\Desktop\Web studies\html-css\emmet to gain some time\emmettoupthehtmlgame.html">Back to 1st page</a></p>
+    <p><a href="https://neymarvaz.github.io/html-css/emmet%20to%20gain%20some%20time/emmettoupthehtmlgame.html">Back to 1st page</a></p>
 </body>
 </html>
