--- a/emmet to gain some time/emmettoupthehtmlgame.html
+++ b/emmet to gain some time/emmettoupthehtmlgame.html
@@ -13,7 +13,7 @@
             <img src="" alt="" class="logo">
             <nav>
                 <ul>
-                    <li><a href="C:\Users\Neymar\Desktop\Web studies\html-css\emmet to gain some time\funanimatedcard.html">AAAAAAAAAAAAAAAA</a></li>
+                    <li><a href="https://neymarvaz.github.io/html-css/emmet%20to%20gain%20some%20time/funanimatedcard.html">AAAAAAAAAAAAAAAA</a></li>
                     <li><a href=""></a></li>
                     <li><a href=""></a></li>
                     <li><a href=""></a></li>
